--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/telegram-web-app": "^6.2.2",
+    "axios": "^1.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-player": "^2.11.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
+    "telegram-webapps-types": "^1.0.5"
   }
 }
