--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.4",
     "@types/telegram-web-app": "^6.2.2",
     "axios": "^1.1.3",
+    "colorthief": "^2.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
