--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/telegram-web-app": "^6.2.2",
     "axios": "^1.1.3",
     "colorthief": "^2.3.2",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
