--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@twa-dev/types": "^6.9.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "@types/telegram-web-app": "^6.2.2",
     "axios": "^1.1.3",
     "colorthief": "^2.3.2",
     "dexie": "^3.2.4",
