--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "types": ["vite/client", "vite-plugin-svgr/client"],
     "typeRoots": [
       // "src/types",
       "./node_modules/@types",
