--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "colorthief": "^2.4.0",
     "dexie": "^3.2.4",
     "dexie-react-hooks": "^1.1.6",
+    "i18next": "^23.7.11",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
     "react-query": "^3.39.3",
