--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "colorthief": "^2.4.0",
     "dexie": "^3.2.4",
     "dexie-react-hooks": "^1.1.6",
+    "framer-motion": "^11.0.3",
     "i18next": "^23.7.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
