--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.16.0",
     "swiper": "^10.3.1",
     "vite-tsconfig-paths": "^4.2.1",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.0",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "vite",
