--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dexie-react-hooks": "^1.1.6",
     "framer-motion": "^11.0.3",
     "i18next": "^23.7.11",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
