--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.3.3",
     "telegram-webapps-types": "^1.0.5",
     "typescript": "^5.0.0",
